// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboardResizeHandle > renders with as correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <section role="separator" class="hidden cursor-ew-resize select-none relative touch-none lg:block before:content-empty before:inset-y-0 before:absolute before:z-1 before:-left-1.5 before:-right-1.5"></section>
</div>"
`;

exports[`dashboardResizeHandle > renders with class correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div role="separator" class="hidden cursor-ew-resize select-none relative touch-none lg:block before:content-empty before:inset-y-0 before:absolute before:z-1 before:-left-1.5 before:-right-1.5 absolute"></div>
</div>"
`;

exports[`dashboardResizeHandle > renders with default slot correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div role="separator" class="hidden cursor-ew-resize select-none relative touch-none lg:block before:content-empty before:inset-y-0 before:absolute before:z-1 before:-left-1.5 before:-right-1.5">Default slot</div>
</div>"
`;
